[gd_scene load_steps=4 format=2]

[ext_resource path="res://mouse_over.png" type="Texture" id=1]
[ext_resource path="res://Script/SelectTableArea.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[node name="POS" type="Area2D"]
position = Vector2( 480, 288 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="mouse_over" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="x_o" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
[connection signal="input_event" from="." to="." method="_on_POS_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_POS_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_POS_mouse_exited"]
